--- a/app/config/config.json
+++ b/app/config/config.json
@@ -341,6 +341,7 @@
                 "prettyName": "Magnitude"
             }],
             "mappings": {
+                "graph_nodes": "label"
             }
         }]
     }],
