NEON-1397 NEON-1409 Added a relations field to datasets in config.json containing related fields between tables in the dataset.  The Graph now sets filters on its selected field and related fields in other tables simultaneously.  Created the FilterService to handle setting filters on related fields.  Also fixed a bug in the Graph in which filters were added instead of being replaced causing odd behavior in other visualizations.

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -343,6 +343,10 @@
             "mappings": {
                 "graph_nodes": "label"
             }
+        }],
+        "relations": [{
+            "twitter36": "screen_name",
+            "ff": "label"
         }]
     }],
 
