Adding the D3 Graph to the layout for the HSBC datasets.

--- a/app/config/hsbc.config.json
+++ b/app/config/hsbc.config.json
@@ -455,6 +455,10 @@
             "sizeX": 2,
             "sizeY": 2,
             "type": "count-by"
+        }, {
+            "sizeX": 4,
+            "sizeY": 2,
+            "type": "directed-graph"
         }]
     }
 }
