--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
     "license": "Apache v2",
     "private": true,
     "devDependencies": {
-        "grunt": "~0.4.1",
+        "bower": "1.3.1",
+        "grunt": "0.4.1",
         "grunt-bower-task": "0.4.0",
-        "grunt-cli": "~0.1.6",
-        "grunt-contrib-clean": "^0.6.0",
+        "grunt-cli": "0.1.6",
+        "grunt-contrib-clean": "0.6.0",
         "grunt-contrib-jshint": "0.10.0",
-        "grunt-contrib-yuidoc": "~0.5.2",
+        "grunt-contrib-yuidoc": "0.5.2",
+        "grunt-jscs": "0.8.0",
+        "grunt-karma": "0.8.2",
         "grunt-war": "0.3.3",
-        "grunt-karma": "~0.8.2",
-        "karma": "~0.12.9",
-        "protractor": "^1.1.1",
-        "http-server": "^0.6.1",
-        "bower": "^1.3.1",
-        "shelljs": "^0.2.6",
-        "karma-junit-reporter": "^0.2.2",
+        "http-server": "0.6.1",
+        "karma": "0.12.9",
+        "karma-junit-reporter": "0.2.2",
         "karma-chrome-launcher": "0.1.7",
+        "karma-phantomjs-launcher": "0.1.4",
         "karma-ng-html2js-preprocessor": "0.1.2",
-        "karma-phantomjs-launcher": "~0.1.4",
-        "grunt-jscs": "=0.8.0"
+        "protractor": "1.1.1",
+        "shelljs": "0.2.6"
     },
     "scripts": {
         "postinstall": "",
