--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
         "remarkable-bootstrap-notify": "3.0.0",
         "respond": "1.4.2",
         "slickgrid": "2.1.0",
+        "user-ale": "draperlaboratory/user-ale#67954dc8bcb02c657306ea89193b25e4831bf59e",
         "xdatalogger": "https://github.com/draperlab/xdatalogger.git",
         "xdatalogger-worker": "https://raw.githubusercontent.com/draperlab/xdatalogger/master/javascript/draper.activity_worker-2.1.1.js"
     },
@@ -112,6 +113,10 @@
 
         "xdatalogger": {
             "js": "**/draper.activity_*-2.1.1.js"
+        },
+
+        "user-ale": {
+            "js": "helper-libs/javascript/*.js"
         },
 
         "*": {
