NEON-1324 Adding less grunt library

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-logs/*
-!.gitkeep
-app/lib
-bower_components/
-docs/
-node_modules/
-target/
-tmp
 .DS_Store
 .idea
-reports
 .orig
 .swp
+!.gitkeep
+app/lib
+app/css/app.css
+bower_components/
 config.json
+docs/
+logs/*
+node_modules/
+reports
+target/
+tmp
