--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "grunt-cli": "0.1.13",
         "grunt-contrib-clean": "0.6.0",
         "grunt-contrib-jshint": "0.11.2",
+        "grunt-contrib-less": "1.0.0",
         "grunt-contrib-yuidoc": "0.7.0",
         "grunt-jscs": "1.8.0",
         "grunt-karma": "0.10.1",
