Converting more xdatalogger logs to user-ale logs; removing the old library from bower and jshint setup; cleaning up a bunch of style and jshint issues.

--- a/.jshintrc
+++ b/.jshintrc
@@ -86,7 +86,6 @@
     "globals": {
         "$": true,
         "_": true,
-        "activityLogger": true,
         "afterEach": false,
         "angular": false,
         "beforeEach": false,
@@ -110,6 +109,7 @@
         "require": true,
         "Slick": true,
         "tables": true,
+        "userale": true,
         "uuid": true,
         "window": true,
         "XDATA": true
