NEON-1471 Added configuration file option to set the number of gridster columns for the dashboard.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -1,4 +1,8 @@
 {
+    "dashboard": {
+        "gridsterColumns": 6
+    },
+
     "xdata": {
         "echoToConsole": false,
         "enableLoggin": false,
