NEON-1476 The Filter Builder can now be added as a visualization in addition to being a navbar item.  Moved all the styling for the Filter Builder from the master style CSS file to its own CSS file.  Added a temporary icon for the visualization.  Included the Filter Builder in the sample config file.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -24,6 +24,18 @@
     },
 
     "visualizations": [{
+        "name": "Filter Builder",
+        "sizeX": 4,
+        "sizeY": 2,
+        "type": "filter-builder",
+        "icon": "img/visualizations/CreateFilter64.png"
+    }, {
+        "name": "Data Table",
+        "sizeX": 6,
+        "sizeY": 2,
+        "type": "query-results-table",
+        "icon": "img/visualizations/ViewData64.png"
+    }, {
         "name": "Timeline",
         "sizeX": 6,
         "sizeY": 1,
@@ -71,12 +83,6 @@
         "sizeY": 2,
         "type": "sunburst",
         "icon": "img/visualizations/Sunburst64.png"
-    }, {
-        "name": "Data Table",
-        "sizeX": 6,
-        "sizeY": 2,
-        "type": "query-results-table",
-        "icon": "img/visualizations/ViewData64.png"
     }, {
         "name": "Graph",
         "sizeX": 4,
