NEON-1471 Users can now hide the items in the navbar through a new option in the configuration file.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -1,6 +1,7 @@
 {
     "dashboard": {
-        "gridsterColumns": 6
+        "gridsterColumns": 6,
+        "hideNavbarItems": false
     },
 
     "xdata": {
