--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -194,6 +194,7 @@
             "sizeY": 1,
             "type": "timeline-selector",
             "bindings": {
+                "bind-table": "'myTable'",
                 "bind-date-field": "'date'"
             }
         }, {
@@ -201,6 +202,7 @@
             "sizeY": 2,
             "type": "heat-map",
             "bindings": {
+                "bind-table": "'myTable'",
                 "bind-latitude-field": "'latitude'",
                 "bind-longitude-field": "'longitude'",
                 "bind-color-field": "'type'",
@@ -211,6 +213,7 @@
             "sizeY": 2,
             "type": "circular-heat-form",
             "bindings": {
+                "bind-table": "'myTable'",
                 "bind-date-field": "'date'"
             }
         }, {
@@ -218,6 +221,7 @@
             "sizeY": 2,
             "type": "linechart",
             "bindings": {
+                "bind-table": "'myTable'",
                 "bind-date-field": "'date'",
                 "bind-y-axis-field": "'type'",
                 "bind-category-field": "'type'",
@@ -228,6 +232,7 @@
             "sizeY": 2,
             "type": "barchart",
             "bindings": {
+                "bind-table": "'myTable'",
                 "bind-x-axis-field": "'type'",
                 "bind-y-axis-field": "'type'",
                 "bind-aggregation-field": "'count'"
@@ -237,6 +242,7 @@
             "sizeY": 2,
             "type": "count-by",
             "bindings": {
+                "bind-table": "'myTable'",
                 "bind-count-field": "'type'"
             }
         }, {
@@ -244,7 +250,22 @@
             "sizeY": 2,
             "type": "tag-cloud",
             "bindings": {
+                "bind-table": "'myTable'",
                 "bind-tag-field": "'hashtags'"
+            }
+        }, {
+            "sizeX": 2,
+            "sizeY": 2,
+            "type": "sunburst",
+            "bindings": {
+                "bind-table": "'myTable'"
+            }
+        }, {
+            "sizeX": 6,
+            "sizeY": 2,
+            "type": "query-results-table",
+            "bindings": {
+                "bind-table": "'myTable'"
             }
         }]
     }
