NEON-1471 Setting a minimum gridster size on gridster items that do not have a minimum specified in the configuration file.  This helps prevent styling issues with visualizations that are already too small to be useful anyway.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -32,6 +32,7 @@
         "name": "Timeline",
         "sizeX": 6,
         "sizeY": 1,
+        "minSizeY": 1,
         "type": "timeline-selector",
         "icon": "img/visualizations/Timeline64.png"
     }, {
@@ -164,6 +165,7 @@
         "default": [{
             "sizeX": 6,
             "sizeY": 1,
+            "minSizeY": 1,
             "type": "timeline-selector"
         }, {
             "sizeX": 4,
