NEON-1477 Users can now save layouts and datasets in separate configuration files in addition to the layouts and datasets defined in the main config.json file.  Updated the set of sample configuration files.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -268,5 +268,14 @@
                 "bind-table": "'myTable'"
             }
         }]
+    },
+
+    "files": {
+        "datasets": [
+            "./config/sample.dataset.config.json"
+        ],
+        "layouts": [
+            "./config/sample.layout.config.json"
+        ]
     }
 }
