--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -21,7 +21,6 @@
         "hideNavbarItems": false
     },
 
-
     "opencpu": {
         "enableOpenCpu": false,
         "enableLogging": false,
@@ -62,13 +61,13 @@
         "type": "heat-map",
         "icon": "img/visualizations/Map64.png"
     }, {
-        "name": "Linechart",
+        "name": "Line Chart",
         "sizeX": 2,
         "sizeY": 2,
         "type": "linechart",
         "icon": "img/visualizations/LineChart64.png"
     }, {
-        "name": "Barchart",
+        "name": "Bar Chart",
         "sizeX": 2,
         "sizeY": 2,
         "type": "barchart",
@@ -80,19 +79,19 @@
         "type": "circular-heat-form",
         "icon": "img/visualizations/OpsClock64.png"
     }, {
-        "name": "Tag Cloud",
+        "name": "Text Cloud",
         "sizeX": 2,
         "sizeY": 2,
         "type": "tag-cloud",
         "icon": "img/visualizations/TagCloud64.png"
     }, {
-        "name": "Count By",
+        "name": "Count Table",
         "sizeX": 2,
         "sizeY": 2,
         "type": "count-by",
         "icon": "img/visualizations/Count64.png"
     }, {
-        "name": "Sunburst",
+        "name": "Sunburst Chart",
         "sizeX": 2,
         "sizeY": 2,
         "type": "sunburst",
