NEON-1471 Added a configuration option to hide all advanced options in the visualizations (the table and field selection).

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -18,7 +18,8 @@
 
     "dashboard": {
         "gridsterColumns": 6,
-        "hideNavbarItems": false
+        "hideNavbarItems": false,
+        "hideAdvancedOptions": false
     },
 
     "opencpu": {
