NEON-1425 Added a configuration option to hide error notifications for use during demos.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -19,7 +19,8 @@
     "dashboard": {
         "gridsterColumns": 6,
         "hideNavbarItems": false,
-        "hideAdvancedOptions": false
+        "hideAdvancedOptions": false,
+        "hideErrorNotifications": false
     },
 
     "opencpu": {
