NEON-1482: Shuffling around the map popup code and changing it to work per layer.  A separate select control is used for each selectable layer to avoid some open issues with removing layers when there is an active select control that points to multiple layers.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -172,6 +172,32 @@
                 "size_by": "mag",
                 "sort_by": "time"
             }
+        }],
+        "mapLayers": [{
+            "database": "test",
+            "table": "earthquakes",
+            "type": "heatmap",
+            "latitudeMapping": "latitude",
+            "longitudeMapping": "longitude",
+            "sizeBy": "mag"
+        }, {
+            "database": "test",
+            "table": "earthquakes",
+            "active":  true,
+            "type": "cluster",
+            "latitudeMapping": "latitude",
+            "longitudeMapping": "longitude",
+            "colorBy": "magType",
+            "sizeBy": "mag"
+        }, {
+            "database": "test",
+            "table": "earthquakes",
+            "active":  true,
+            "type": "points",
+            "latitudeMapping": "latitude",
+            "longitudeMapping": "longitude",
+            "colorBy": "magType",
+            "sizeBy": "mag"
         }]
     }],
 
